// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetourListPage renders detour list page for dispatchers 1`] = `
<body>
  <div>
    <div
      class="c-detour-list-page h-100 overflow-y-auto p-0 p-md-4 bg-white"
    >
      <button
        class="c-detour-list-page__button icon-link fw-light px-3 py-2 u-hide-for-mobile btn btn-primary"
        data-fs-element="Add Detour"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="bi bi-plus-square"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"
          />
          <path
            d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"
          />
        </svg>
        <span
          class="c-detour-list-page__button-text"
        >
          Add detour
        </span>
      </button>
      <div
        class="d-flex mt-3 mt-md-0 mb-3 mx-3 mx-md-0"
      >
        <h2
          class="my-auto fw-semibold fs-1 me-3 text-nowrap"
        >
          Active detours
        </h2>
        <svg
          aria-hidden="true"
          class="c-detour-list-page__header-icon my-auto me-1"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0M2.04 4.326c.325 1.329 2.532 2.54 3.717 3.19.48.263.793.434.743.484q-.121.12-.242.234c-.416.396-.787.749-.758 1.266.035.634.618.824 1.214 1.017.577.188 1.168.38 1.286.983.082.417-.075.988-.22 1.52-.215.782-.406 1.48.22 1.48 1.5-.5 3.798-3.186 4-5 .138-1.243-2-2-3.5-2.5-.478-.16-.755.081-.99.284-.172.15-.322.279-.51.216-.445-.148-2.5-2-1.5-2.5.78-.39.952-.171 1.227.182.078.099.163.208.273.318.609.304.662-.132.723-.633.039-.322.081-.671.277-.867.434-.434 1.265-.791 2.028-1.12.712-.306 1.365-.587 1.579-.88A7 7 0 1 1 2.04 4.327Z"
          />
        </svg>
        <span
          class="c-detour-list-page__header-visibility my-auto"
        >
          All Skate users
        </span>
      </div>
      <table
        class="mb-5 c-detours-table table table-active-detour table-hover"
      >
        <thead
          class="u-hide-for-mobile"
        >
          <tr>
            <th
              class="px-3 py-4"
            >
              Route and direction
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              Starting Intersection
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              On detour since
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle p-3"
            >
              <div
                class="d-flex"
              >
                <div
                  class="c-route-pill c-route-pill--bus"
                >
                  1
                </div>
                <div
                  class="c-detours-table__route-info-text d-inline-block"
                >
                  <div
                    class="pb-1 fs-4 fw-semibold"
                  >
                    Headsign A
                  </div>
                  <div
                    class="c-detours-table__route-info-direction fs-6"
                  >
                    Inbound
                  </div>
                </div>
              </div>
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              Street A & Avenue B
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              26 hours ago
            </td>
          </tr>
          <tr>
            <td
              class="align-middle p-3"
            >
              <div
                class="d-flex"
              >
                <div
                  class="c-route-pill c-route-pill--bus"
                >
                  2
                </div>
                <div
                  class="c-detours-table__route-info-text d-inline-block"
                >
                  <div
                    class="pb-1 fs-4 fw-semibold"
                  >
                    Headsign B
                  </div>
                  <div
                    class="c-detours-table__route-info-direction fs-6"
                  >
                    Outbound
                  </div>
                </div>
              </div>
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              Street C & Avenue D
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              29 hours ago
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="u-hide-for-mobile d-md-flex mt-3 mt-md-0 mb-3 mx-3 mx-md-0"
      >
        <h2
          class="my-auto fw-semibold fs-1 me-3 text-nowrap"
        >
          Draft detours
        </h2>
        <svg
          aria-hidden="true"
          class="c-detour-list-page__header-icon my-auto me-1"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2m3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2"
          />
        </svg>
        <span
          class="c-detour-list-page__header-visibility my-auto"
        >
          Only you
        </span>
      </div>
      <table
        class="mb-5 u-hide-for-mobile c-detours-table table"
      >
        <thead
          class="u-hide-for-mobile"
        >
          <tr>
            <th
              class="px-3 py-4"
            >
              Route and direction
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              Starting Intersection
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              Last edited
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            aria-hidden="true"
          >
            <td
              class="p-3 p-md-4"
              colspan="3"
            >
              <div
                class="d-flex justify-content-center mb-3"
              >
                <svg
                  aria-hidden="true"
                  class="bi"
                  fill="none"
                  height="100px"
                  viewBox="0 0 101 97"
                  width="100px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.7593 96.3069C78.7676 95.6159 101.216 73.7201 100.483 47.9743C99.7264 21.4318 77.8338 0.0142709 50.2246 0.154493C22.6152 0.29649 0.353077 21.9361 0.50073 48.4878C0.648383 75.0396 23.1499 96.4489 50.7593 96.3069Z"
                    fill="#DBDDE1"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M77.8546 42.8941L75.109 22.182C74.4117 18.4448 71.9552 16.9864 68.3003 15.457C62.3115 13.3999 55.9969 12.29 49.6168 12.173C43.2269 12.2913 36.9025 13.4011 30.9028 15.457C27.2934 16.9576 24.8367 18.4442 24.0937 22.1814L21.3335 42.8941V71.5485H26.1788V76.5389C26.1854 78.5889 27.9643 80.2491 30.1604 80.2547C32.3563 80.2487 34.1348 78.5884 34.1413 76.5385V71.5481H65.1922V76.5385C65.1818 77.8726 65.9382 79.1096 67.1742 79.7796C68.4101 80.4495 69.9359 80.4495 71.1719 79.7796C72.4079 79.1096 73.1643 77.8726 73.1538 76.5385V71.5481H77.8552L77.8546 42.8941ZM37.9849 17.4111H61.3396C62.328 17.4111 63.1292 18.1591 63.1292 19.0817C63.1292 20.0044 62.328 20.7523 61.3396 20.7523H37.9849C36.9965 20.7523 36.1953 20.0044 36.1953 19.0817C36.1953 18.1591 36.9965 17.4111 37.9849 17.4111ZM28.6269 25.9337L26.3532 42.2854C26.323 42.4731 26.323 42.6639 26.3532 42.8517C26.3241 43.4151 26.5364 43.9662 26.9433 44.3832C27.3502 44.8002 27.9182 45.0489 28.5218 45.0743H70.8784C71.481 45.0804 72.061 44.8605 72.4884 44.4639C72.9158 44.0674 73.1549 43.5273 73.1521 42.9648V42.8517C73.1826 42.664 73.1826 42.4731 73.1521 42.2854L70.8784 25.9337C70.6956 24.9045 69.7364 24.1533 68.6189 24.1642H30.9006C29.7801 24.153 28.8166 24.9028 28.6269 25.9337ZM30.1604 62.6858C27.8195 62.6898 25.9183 60.9216 25.9139 58.7363C25.9096 56.551 27.8036 54.7762 30.1445 54.772C32.4854 54.7678 34.3868 56.5358 34.3914 58.7211C34.3943 59.7708 33.95 60.7786 33.1563 61.5223C32.3627 62.266 31.2849 62.6846 30.1604 62.6858ZM64.9351 58.7263C64.9335 60.9096 66.8266 62.6815 69.1654 62.6858H69.1648C70.2922 62.6887 71.3743 62.272 72.1716 61.5278C72.9688 60.7837 73.4154 59.7735 73.4125 58.7211C73.4079 56.5378 71.5098 54.7705 69.171 54.772C66.8322 54.7734 64.9366 56.543 64.9351 58.7263Z"
                    fill="#1C1E23"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="d-flex justify-content-center"
              >
                <p
                  class="fs-3 fw-light m-0"
                >
                  No draft detours.
                </p>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="u-hide-for-mobile d-md-flex mt-3 mt-md-0 mb-3 mx-3 mx-md-0"
      >
        <h2
          class="my-auto fw-semibold fs-1 me-3 text-nowrap"
        >
          Closed detours
        </h2>
        <svg
          aria-hidden="true"
          class="c-detour-list-page__header-icon my-auto me-1"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.24 2.24 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.3 6.3 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"
          />
        </svg>
        <span
          class="c-detour-list-page__header-visibility my-auto"
        >
          Dispatchers and supervisors
        </span>
      </div>
      <table
        class="u-hide-for-mobile c-detours-table table table-hover"
      >
        <thead
          class="u-hide-for-mobile"
        >
          <tr>
            <th
              class="px-3 py-4"
            >
              Route and direction
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              Starting Intersection
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              Last used
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle p-3"
            >
              <div
                class="d-flex"
              >
                <div
                  class="c-route-pill c-route-pill--bus"
                >
                  1
                </div>
                <div
                  class="c-detours-table__route-info-text d-inline-block"
                >
                  <div
                    class="pb-1 fs-4 fw-semibold"
                  >
                    Headsign A
                  </div>
                  <div
                    class="c-detours-table__route-info-direction fs-6"
                  >
                    Inbound
                  </div>
                </div>
              </div>
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              Street E & Avenue F
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              26 hours ago
            </td>
          </tr>
          <tr>
            <td
              class="align-middle p-3"
            >
              <div
                class="d-flex"
              >
                <div
                  class="c-route-pill c-route-pill--bus"
                >
                  1
                </div>
                <div
                  class="c-detours-table__route-info-text d-inline-block"
                >
                  <div
                    class="pb-1 fs-4 fw-semibold"
                  >
                    Headsign Z
                  </div>
                  <div
                    class="c-detours-table__route-info-direction fs-6"
                  >
                    Outbound
                  </div>
                </div>
              </div>
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              Street C & Avenue D
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              26 hours ago
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`DetourListPage renders limited detour list page for non-dispatchers 1`] = `
<body>
  <div>
    <div
      class="c-detour-list-page h-100 overflow-y-auto p-0 p-md-4 bg-white"
    >
      <div
        class="d-flex mt-3 mt-md-0 mb-3 mx-3 mx-md-0"
      >
        <h2
          class="my-auto fw-semibold fs-1 me-3 text-nowrap"
        >
          Active detours
        </h2>
        <svg
          aria-hidden="true"
          class="c-detour-list-page__header-icon my-auto me-1"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0M2.04 4.326c.325 1.329 2.532 2.54 3.717 3.19.48.263.793.434.743.484q-.121.12-.242.234c-.416.396-.787.749-.758 1.266.035.634.618.824 1.214 1.017.577.188 1.168.38 1.286.983.082.417-.075.988-.22 1.52-.215.782-.406 1.48.22 1.48 1.5-.5 3.798-3.186 4-5 .138-1.243-2-2-3.5-2.5-.478-.16-.755.081-.99.284-.172.15-.322.279-.51.216-.445-.148-2.5-2-1.5-2.5.78-.39.952-.171 1.227.182.078.099.163.208.273.318.609.304.662-.132.723-.633.039-.322.081-.671.277-.867.434-.434 1.265-.791 2.028-1.12.712-.306 1.365-.587 1.579-.88A7 7 0 1 1 2.04 4.327Z"
          />
        </svg>
        <span
          class="c-detour-list-page__header-visibility my-auto"
        >
          All Skate users
        </span>
      </div>
      <table
        class="mb-5 c-detours-table table table-active-detour table-hover"
      >
        <thead
          class="u-hide-for-mobile"
        >
          <tr>
            <th
              class="px-3 py-4"
            >
              Route and direction
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              Starting Intersection
            </th>
            <th
              class="px-3 py-4 u-hide-for-mobile"
            >
              On detour since
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="align-middle p-3"
            >
              <div
                class="d-flex"
              >
                <div
                  class="c-route-pill c-route-pill--bus"
                >
                  1
                </div>
                <div
                  class="c-detours-table__route-info-text d-inline-block"
                >
                  <div
                    class="pb-1 fs-4 fw-semibold"
                  >
                    Headsign A
                  </div>
                  <div
                    class="c-detours-table__route-info-direction fs-6"
                  >
                    Inbound
                  </div>
                </div>
              </div>
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              Street A & Avenue B
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              26 hours ago
            </td>
          </tr>
          <tr>
            <td
              class="align-middle p-3"
            >
              <div
                class="d-flex"
              >
                <div
                  class="c-route-pill c-route-pill--bus"
                >
                  2
                </div>
                <div
                  class="c-detours-table__route-info-text d-inline-block"
                >
                  <div
                    class="pb-1 fs-4 fw-semibold"
                  >
                    Headsign B
                  </div>
                  <div
                    class="c-detours-table__route-info-direction fs-6"
                  >
                    Outbound
                  </div>
                </div>
              </div>
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              Street C & Avenue D
            </td>
            <td
              class="align-middle p-3 u-hide-for-mobile"
            >
              29 hours ago
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
